--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <a href="#" class="nav-link"> <i class="fa-solid fa-gear"></i> SERVICES</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link"> <i class="fa-solid fa-envelope"></i> CONTACT</a>
+                        <a href="/contacto.html" class="nav-link"> <i class="fa-solid fa-envelope"></i> CONTACT</a>
                     </li>
                 </ul>
             </div>
@@ -145,7 +145,7 @@
                             <li><a href="#">home</a></li>
                             <li><a href="#">About us</a></li>
                             <li><a href="#">Services</a></li>
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="/contacto.html">Contact</a></li>
                         </ul>
                     </div>
                     <div class="col-md-4">
