--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <a href="#" class="nav-link"> <i class="fa-solid fa-house"></i>  HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link"> <i class="fa-solid fa-info"></i> ABAOUT US</a>
+                        <a href="#" class="nav-link"> <i class="fa-solid fa-info"></i> ABAOcjvdfkghdfskjghkjdsUT US</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link"> <i class="fa-solid fa-gear"></i> SERVICES</a>
